--- a/style.css
+++ b/style.css
@@ -103,10 +103,19 @@ header ul li a {
     text-decoration: none;
 }
 
+header ul li:nth-child(5) a {
+    color: #e74c3c;
+    font-weight: bold;
+}
+
 header.white ul li a {
     color: #111;
 }
 
+header.white ul li:nth-child(5) a {
+    color: #e74c3c;
+    font-weight: bold;
+}
 
 .heading {
     width: 100%;
@@ -265,7 +274,7 @@ video {
 .educa {
     background-color: #111;
     color: #fff;
-    padding-bottom: 50px;
+    padding-bottom: 70px;
     place-items: center;
     text-align: center;
 }
@@ -336,4 +345,132 @@ video {
 
 .card .content4 .btn2 button:hover {
     transform: scale(0.9);
+}
+
+footer {
+    position: relative;
+    width: 100%;
+    height: auto;
+    padding: 15px 100px;
+    background: #04244D;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+footer .container {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+    flex-direction: row;
+}
+
+footer .container .sec.aboutus {
+    width: 40%;
+}
+
+footer .container h2 {
+    position: relative;
+    color: rgb(255, 255, 255);
+    font-weight: 500;
+    margin-bottom: 15px;
+}
+
+footer .container h2:before {
+    content: '';
+    position: absolute;
+    bottom: -5px;
+    left: 0;
+    width: 50px;
+    height: 2px;
+    background: #f00;
+}
+
+footer p {
+    color: #999;
+    font-style: italic;
+}
+
+.sci {
+    margin-top: 20px;
+    display: flex;
+}
+
+.sci li {
+    list-style: none;
+}
+
+.sci li a {
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    background: #222;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 10px;
+    text-decoration: none;
+    border-radius: 4px;
+}
+
+.sci li a:hover {
+    background: #f00;
+}
+
+.sci li a .fa {
+    color: #fff;
+    font-size: 20px;
+}
+
+.quickLinks {
+    position: relative;
+    width: 25%;
+}
+
+.quickLinks ul li {
+    list-style: none;
+}
+
+.quickLinks ul li a {
+    color: #999;
+    text-decoration: none;
+    margin-bottom: 10px;
+    display: inline-block;
+}
+
+.quickLinks ul li a:hover {
+    color: #f00;
+}
+
+.contact {
+    width: calc(35% - 60px);
+    margin-right: 0 !important;
+}
+
+.contact .info {
+    position: relative;
+}
+
+.contact .info li {
+    display: flex;
+    margin-bottom: 16px;
+}
+
+.contact .info li span:nth-child(1) {
+    color: #fff;
+    font-size: 20px;
+    margin-right: 10px;
+}
+
+.contact .info li span {
+    color: #999;
+}
+
+.contact .info li a {
+    color: #999;
+    text-decoration: none;
+}
+
+.contact .info li a:hover {
+    color: #f00;
 }
