--- a/style.css
+++ b/style.css
@@ -101,6 +101,11 @@ header ul li a {
     margin: 0 10px;
     color: #fff;
     text-decoration: none;
+    transition: 0.2s;
+}
+
+header ul li a:hover {
+    transform: scale(0.95);
 }
 
 header ul li:nth-child(5) a {
@@ -215,6 +220,16 @@ video {
     background: #3e8577;
     border-radius: 5px;
     cursor: pointer;
+    transition: 0.2s;
+}
+
+.candidate .content3 .candBx a {
+    color: inherit;
+    text-decoration: none;
+}
+
+.candidate .content3 .candBx:hover {
+    transform: scale(0.98);
 }
 
 .candidate .content3 .candBx p {
@@ -245,6 +260,16 @@ video {
     background: #1b0452;
     border-radius: 5px;
     cursor: pointer;
+    transition: 0.2s;
+}
+
+.candidate .content3 .candBx2 a {
+    color: inherit;
+    text-decoration: none;
+}
+
+.candidate .content3 .candBx2:hover {
+    transform: scale(0.98);
 }
 
 .candidate .content3 .candBx h3 {
