--- a/subpages/signin+up/style.css
+++ b/subpages/signin+up/style.css
@@ -11,6 +11,29 @@ input {
     font-family: 'Poppins', sans-serif;
 }
 
+header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000;
+    display: flex;
+    justify-content: left;
+    align-items: flex-start;
+    background: rgb(255, 255, 255);
+    padding: 5px 50px;
+    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.25);
+}
+
+header .logo {
+    color: #111;
+    font-size: 24px;
+    text-transform: uppercase;
+    text-decoration: none;
+    font-weight: 700;
+    letter-spacing: 2px;
+}
+
 .container {
     position: relative;
     width: 100%;
@@ -22,13 +45,15 @@ input {
 .container::before {
     content: '';
     position: absolute;
-    width: 2000px;
-    height: 2000px;
+    width: 3000px;
+    height: 3000px;
     border-radius: 50%;
-    background: linear-gradient(-45deg, #4481eb, #04befe);
+    background: linear-gradient(-45deg, #e74c3c, #f70606);
     top: -10%;
     right: 48%;
     transform: translateY(-50%);
+    z-index: 6;
+    transition: 1.8s ease-in-out;
 }
 
 .forms-container {
@@ -47,6 +72,8 @@ input {
     width: 50%;
     display: grid;
     grid-template-columns: 1fr;
+    z-index: 5;
+    transition: 1s 0.7s ease-in-out;
 }
 
 form {
@@ -58,6 +85,7 @@ form {
     overflow: hidden;
     grid-column: 1 / 2;
     grid-row: 1 / 2;
+    transition: 0.2s 0.7s ease-in-out;
 }
 
 form.sign-in-form {
@@ -116,7 +144,7 @@ form.sign-up-form {
     outline: none;
     border-radius: 49px;
     cursor: pointer;
-    background-color: #5995fd;
+    background-color: #e74c3c;
     color: #fff;
     text-transform: uppercase;
     font-weight: 600;
@@ -125,7 +153,7 @@ form.sign-up-form {
 }
 
 .btn:hover {
-    background-color: #4d84e2;
+    background-color: #e74c3c;
 }
 
 .social-text {
@@ -154,6 +182,110 @@ form.sign-up-form {
 }
 
 .social-icon:hover {
-    color: #4481eb;
-    border-color: #4481eb;
+    color: #e74c3c;
+    border-color: #e74c3c;
+}
+
+.panels-container {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+
+}
+
+.left-panel {
+    pointer-events: all;
+    padding: 3rem 17% 2rem 12%;
+}
+
+.right-panel {
+    pointer-events: none;
+    padding: 3rem 17% 2rem 17%;
+}
+
+.panel {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: space-around;
+    text-align: center;
+    z-index: 7;
+}
+
+.panel .content {
+    color: #fff;
+    transition: 0.9s 0.6s ease-in-out;
+}
+
+.panel h3 {
+    font-weight: 600;
+    line-height: 1;
+    font-size: 1.5rem;
+}
+
+.panel p {
+    font-size: 0.95rem;
+    padding: 0.7rem 0;
+
+}
+
+.btn.transparent {
+    margin: 0;
+    background: none;
+    border: 2px solid #fff;
+    width: 130px;
+    height: 41px;
+    font-weight: 600;
+    font-size: 0.8rem;
+}
+
+.image {
+    width: 100%;
+    transition: 1.1s 0.4s ease-in-out;
+}
+
+.right-panel .content,
+.right-panel .image {
+    transform: translateX(800px);
+}
+
+.container.sign-up-mode::before {
+    transform: translate(100%, -50%);
+    right: 52%;
+}
+
+.container.sign-up-mode .left-panel .image,
+.container.sign-up-mode .left-panel .content {
+    transform: translateX(-800px);
+}
+
+.container.sign-up-mode .right-panel .content,
+.container.sign-up-mode .right-panel .image {
+    transform: translateX(0px);
+}
+
+.container.sign-up-mode .left-panel {
+    pointer-events: none;
+}
+
+.container.sign-up-mode .right-panel {
+    pointer-events: all;
+}
+
+.container.sign-up-mode .signin-signup {
+    left: 25%;
+}
+
+.container.sign-up-mode form.sign-in-form {
+    z-index: 1;
+    opacity: 0;
+}
+
+.container.sign-up-mode form.sign-up-form {
+    z-index: 2;
+    opacity: 1;
 }
