--- a/subpages/Login/style.css
+++ b/subpages/Login/style.css
@@ -14,7 +14,7 @@ header {
     justify-content: left;
     align-items: flex-start;
     background: rgb(255, 255, 255);
-    padding: 5px 50px;
+    padding: 1px 50px;
     box-shadow: 0 5px 20px rgba(0, 0, 0, 0.25);
 }
 
@@ -111,6 +111,7 @@ input {
     padding: 12px 15px;
     margin: 8px 0;
     width: 100%;
+    border-radius: 55px;
 }
 
 .container {
@@ -188,8 +189,8 @@ input {
 
 .overlay {
     background: #FF416C;
-    background: -webkit-linear-gradient(to right, #FF4B2B, #FF416C);
-    background: linear-gradient(to right, #FF4B2B, #FF416C);
+    background: -webkit-linear-gradient(to right, #e74c3c, #FF416C);
+    background: linear-gradient(to right, #e74c3c, #FF416C);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 0 0;
