--- a/subpages/signin+up/new_user/style_newuser.css
+++ b/subpages/signin+up/new_user/style_newuser.css
@@ -2,7 +2,7 @@
 
 body {
     width: 100%;
-    background: linear-gradient(100%, #e74c3c, #f70606);
+    background: linear-gradient(#e74c3c, #f70606);
     font-family: 'Poppins', sans-serif;
 }
 
