--- a/subpages/signin+up/new_user/match/style.css
+++ b/subpages/signin+up/new_user/match/style.css
@@ -1,60 +1,254 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap");
 
 * {
-    padding: 0;
     margin: 0;
+    padding: 0;
+    list-style: none;
+    text-decoration: none;
     box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
 }
 
-body,
-input {
-    font-family: 'Poppins', sans-serif;
+body {
+    background: #fff;
+
 }
 
-header {
+.wrapper .header {
+    z-index: 1;
+    background: #22242A;
     position: fixed;
+    width: calc(100% - 0%);
+    height: 70px;
+    display: flex;
     top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 1000;
+}
+
+.wrapper .header .header-menu {
+    width: calc(100% - 0%);
+    height: 100%;
     display: flex;
     justify-content: space-between;
-    align-items: flex-start;
-    background: rgb(255, 255, 255);
-    padding: 5px 50px;
-    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.25);
+    align-items: center;
+    padding: 0 20px;
 }
 
-header .logo {
-    color: #111;
-    font-size: 30px;
+.wrapper .header .header-menu .title {
+    color: #fff;
+    font-size: 25px;
     text-transform: uppercase;
-    text-decoration: none;
-    font-weight: 700;
-    letter-spacing: 2px;
+    font-weight: 900;
 }
 
-header ul {
-    position: relative;
+.wrapper .header .header-menu .title span {
+    color: #e74c3c;
+}
+
+.wrapper .header .header-menu .sidebar-btn {
+    color: #fff;
+    position: absolute;
+    margin-left: 310px;
+    font-size: 22px;
+    font-weight: 900;
+    cursor: pointer;
+    transition: 0.3s;
+    transition-property: color;
+}
+
+.wrapper .header .header-menu .sidebar-btn:hover {
+    color: #e74c3c;
+}
+
+.wrapper .header .header-menu ul {
     display: flex;
 }
 
-header ul li {
-    position: relative;
-    list-style: none;
+.wrapper .header .header-menu ul li a {
+    background: #fff;
+    color: #000;
+    display: block;
+    margin: 0 10px;
+    font-size: 18px;
+    width: 34px;
+    height: 34px;
+    line-height: 35px;
+    text-align: center;
+    border-radius: 50px;
+    transition: 0.3s;
+    transition-property: background, color;
 }
 
-header ul li a {
-    position: relative;
-    display: inline-block;
-    margin: 5px 10px;
-    color: #e74c3c;
-    font-weight: bold;
-    text-decoration: none;
-    transition: 0.2s;
-    font-size: 25px;
+.wrapper .header .header-menu ul li:nth-child(1) a:hover {
+    background-color: green;
+    color: #fff;
 }
 
-header ul li a:hover {
-    transform: scale(0.95);
+.wrapper .header .header-menu ul li:nth-child(2) a:hover {
+    background-color: #f70606;
+    color: #fff;
+}
+
+.wrapper .sidebar {
+    z-index: 1;
+    background: #2F323A;
+    position: fixed;
+    top: 70px;
+    width: 250px;
+    height: calc(100%);
+    transition: 0.3s;
+    transition-property: width;
+    overflow-y: auto;
+}
+
+.wrapper .sidebar .sidebar-menu {
+    overflow: hidden;
+}
+
+.wrapper .sidebar .sidebar-menu .profile img {
+    margin: 20px 0;
+    width: 100px;
+    height: 100px;
+    border-radius: 50px;
+}
+
+.wrapper .sidebar .sidebar-menu .profile p {
+    color: yellow;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+
+.wrapper .sidebar .sidebar-menu .item {
+    width: 270px;
+    overflow: hidden;
+}
+
+.wrapper .sidebar .sidebar-menu .item .menu-btn {
+    display: block;
+    color: #fff;
+    position: relative;
+    padding: 25px 20px;
+    transition: 0.3s;
+    transition-property: color;
+}
+
+.wrapper .sidebar .sidebar-menu .item .menu-btn:hover {
+    color: #e20c0c;
+}
+
+.wrapper .sidebar .sidebar-menu .item .menu-btn i {
+    margin-right: 20px;
+}
+
+.wrapper .sidebar .sidebar-menu .item .menu-btn .drop-down {
+    float: right;
+    font-size: 12px;
+    margin-top: 3px;
+}
+
+.wrapper .sidebar .sidebar-menu .item .sub-menu {
+    background: #e20c0cd8;
+    overflow: hidden;
+    max-height: 0;
+    transition: 0.3s;
+    transition-property: background, max-height;
+}
+
+.wrapper .sidebar .sidebar-menu .item .sub-menu a {
+    display: block;
+    position: relative;
+    color: #fff;
+    white-space: nowrap;
+    font-size: 15px;
+    padding: 20px;
+    border-top: 1px solid #e74c3c;
+    border-bottom: 1px solid #e74c3c;
+    transition: 0.3s;
+    transition-property: background;
+}
+
+.wrapper .sidebar .sidebar-menu .item .sub-menu a:hover {
+    background: #e74c3c;
+}
+
+.wrapper .sidebar .sidebar-menu .item .sub-menu i {
+    padding-right: 20px;
+    font-size: 10px;
+}
+
+.wrapper .sidebar .sidebar-menu .item:target .sub-menu {
+    max-height: 500px;
+}
+
+.wrapper .main-container {
+    width: (100% - 250px);
+    margin-top: 70px;
+    margin-left: 250px;
+    padding: 15px;
+    height: 100vh;
+    transition: 0.3s;
+}
+
+.wrapper.collapse .sidebar {
+    width: 70px;
+}
+
+.wrapper.collapse .sidebar .profile img,
+.wrapper.collapse .sidebar .profile p,
+.wrapper.collapse .sidebar a span {
+    display: none;
+}
+
+.wrapper.collapse .sidebar .sidebar-menu .item .menu-btn {
+    font-size: 23px;
+}
+
+.wrapper.collapse .sidebar .sidebar-menu .item .sub-menu i {
+    font-size: 18px;
+    padding-left: 3px;
+
+}
+
+.wrapper.collapse .main-container {
+    width: (100% - 70px);
+    margin-left: 70px;
+}
+
+.wrapper .main-container .card {
+    background: #fff;
+    padding: 15px;
+}
+
+.navbar {
+    margin-bottom: 0;
+    border-radius: 0;
+}
+
+.row.content {
+    height: 450px
+}
+
+.sidenav {
+    padding-top: 20px;
+    background-color: #f1f1f1;
+    height: 100%;
+}
+
+select.input-sm {
+    height: 40px;
+}
+
+.col-md-6 {
+    position: relative;
+    min-height: 1px;
+    padding-right: 15px;
+    padding-left: 15px;
+    line-height: 35px;
+}
+
+.collapse {
+    display: contents;
+}
+
+.collapse:not(.show) {
+    display: contents;
 }
