--- a/subpages/Login/funcionarios/style.css
+++ b/subpages/Login/funcionarios/style.css
@@ -87,3 +87,10 @@ select.input-sm {
     padding-left: 15px;
     line-height: 35px;
 }
+
+/* .modal-content {
+    min-width: 1000px;
+    min-height: 400px;
+    margin: 2rem auto;
+
+} */
